fixes horizontal issue on small phones

--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -22,7 +22,6 @@ body {
   main {
     color: var(--md-sys-color-on-surface);
     background-color: var(--md-sys-color-surface);
-    padding-inline: 1rem;
   }
 }
 
